fix responsiveness on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ body {
 }
 
 .detail:active {
-    background-color: #ebebeb;
+    background-color: #243754;
 }
 
 .detail-logo {
